--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
   <script src="libs/jquery-3.4.1.slim.min.js"></script>
   <script src="libs/popper.min.js"></script>
   <script src="libs/bootstrap.min.js"></script>
-  <script src="js/products.js"></script>
+  <script src="js/billing.js"></script>
 </head>
 
 <body>
@@ -25,23 +25,23 @@
     </button>
     <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="#" id="billingNavItem">
             BILLING
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="invoiceNavItem">
+          <a class="nav-link" href="invoices" id="invoiceNavItem">
             INVOICE
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="customersNavItem">
+          <a class="nav-link" href="customers" id="customersNavItem">
             CUSTOMERS
           </a>
         </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#" id="productsNavItem">
+        <li class="nav-item">
+          <a class="nav-link" href="products" id="productsNavItem">
             PRODUCTS
           </a>
         </li>
@@ -49,79 +49,146 @@
     </div>
   </nav>
   <div class=".container-fluid">
-    <div class="row" style="padding-top: 100px;">
-      <div class="col-lg-8 offset-lg-2">
-        <table class="table table-striped table-bordered">
+    <div class="row" style="padding-top: 50px;">
+      <div class="col-lg-4" style="padding-left: 50px;">
+        <div class="input-group mb-3">
+          <input type="text" id="searchInvoiceCustomer" class="form-control" placeholder="Search Customer Name"
+            aria-label="Search Customer Name">
+        </div>
+        <div class="list-group" id="customersListGroup" style="height: 198px; overflow-y: auto; margin-bottom: 20px;">
+          <button type="button" customer_id="1" customer_name="Customer Name 1"
+            class="list-group-item list-group-item-action">Customer Name 1</button>
+          <button type="button" customer_id="2" customer_name="Customer Name 2"
+            class="list-group-item list-group-item-action">Customer Name 2</button>
+          <button type="button" customer_id="3" customer_name="Customer Name 3"
+            class="list-group-item list-group-item-action">Customer Name 3</button>
+          <button type="button" customer_id="4" customer_name="Customer Name 4"
+            class="list-group-item list-group-item-action">Customer Name 4</button>
+          <button type="button" customer_id="5" customer_name="Customer Name 5"
+            class="list-group-item list-group-item-action">Customer Name 5</button>
+          <button type="button" customer_id="6" customer_name="Customer Name 6"
+            class="list-group-item list-group-item-action">Customer Name 6</button>
+          <button type="button" customer_id="7" customer_name="Customer Name 7"
+            class="list-group-item list-group-item-action" disabled>Customer Name
+            7</button>
+        </div>
+        <div class="input-group mb-3">
+          <input type="text" id="searchInvoiceItem" class="form-control" placeholder="Search Product Name"
+            aria-label="Search Product Name">
+        </div>
+        <div class="list-group" id="itemsListGroup" style="height: 198px; overflow-y: auto; margin-bottom: 20px;">
+          <button type="button" class="list-group-item list-group-item-action" disabled>No Products Available!</button>
+        </div>
+
+      </div>
+      <div class="col-lg-8" id="invoiceRightPane" style="padding-right: 50px;">
+        <table class="table table-striped table-bordered table-hover">
           <thead class="thead-dark">
             <tr>
               <th scope="col">S.No</th>
               <th scope="col">Product Name</th>
-              <th scope="col">Description</th>
               <th scope="col">Price</th>
-              <th scope="col">In Stock</th>
+              <th scope="col">Quantity</th>
+              <th scope="col">Total</th>
               <th scope="col">Action</th>
             </tr>
           </thead>
-          <tbody id="products_table_body">
 
+          <tbody id="invoice_table_body">
+            <tr>
+              <td colspan="6" style="text-align: center;">No Items added!</td>
+            </tr>
           </tbody>
         </table>
-        <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addProductModal"
-          style="float: right;">
-          Add Product
-        </button>
-      </div>
-      <!-- Modal -->
-      <div class="modal fade" id="addProductModal" tabindex="-1" role="dialog" aria-labelledby="addProductModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="addProductModalLabel">Add Product</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <form>
-                <div class="form-group">
-                  <label for="productName">Product Name*</label>
-                  <input type="text" class="form-control" id="productName" aria-describedby="productHelp">
-                  <small id="productHelp" class="form-text text-muted">Please provide a name for the product. This will
-                    be used to search a product.</small>
+        <!-- Add invoice item modal -->
+        <div class="modal fade" id="addInvoiceItemModal" tabindex="-1" role="dialog"
+          aria-labelledby="addInvoiceItemModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="addInvoiceItemModalLabel">Add Invoice Item</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <div class="container-fluid">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="alert alert-danger fade show" role="alert" id="addInvoiceItemErrorAlert"
+                        style="display: none;">
+                        <strong>ERROR: </strong> <span id="addInvoiceItemErrorMsg"></span>
+                      </div>
+                      <form>
+                        <div class="form-group">
+                          <label for="productName">Product Name</label>
+                          <input type="text" class="form-control" id="productName" aria-describedby="productHelp"
+                            readonly>
+                            <input type="text" class="form-control" id="productId" aria-describedby="productHelp" style="display: none;">
+                        </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="form-group">
+                        <label for="productPrice">Price</label>
+                        <input type="text" class="form-control" id="productPrice" aria-describedby="priceHelp">
+                        <small id="priceHelp" class="form-text text-muted">You can change the price if you wish. This
+                          amount will be used only for the current invoice.</small>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-group">
+                        <label for="productQuantity">Quantity</label>
+                        <input type="text" class="form-control" id="productQuantity"
+                          aria-describedby="productQuantityHelp">
+                        <small id="productQuantityHelp" class="form-text text-muted">Please provide product
+                          quantity.</small>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-6">
+                      <div class="form-group">
+                        <label for="inStockQty">In Stock</label>
+                        <input type="text" class="form-control" id="inStockQty" aria-describedby="inStockQtyHelp"
+                          readonly>
+                        <small id="inStockQtyHelp" class="form-text text-muted">Total stock for this product.</small>
+                      </div>
+                    </div>
+                    <div class="col-lg-6">
+                      <div class="form-group">
+                        <label for="totalAmount">Total</label>
+                        <input type="text" class="form-control" id="totalAmount" aria-describedby="totalAmount"
+                          readonly>
+                        <small id="totalAmount" class="form-text text-muted">Total price of this item.</small>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <div class="form-group">
-                  <label for="productPrice">Price</label>
-                  <input type="text" class="form-control" id="productPrice" aria-describedby="priceHelp">
-                  <small id="priceHelp" class="form-text text-muted">Please provide the selling price of the product. If
-                    not provided, the price will be set to 0.</small>
-                </div>
-                <div class="form-group">
-                  <label for="productQuantity">Quantity</label>
-                  <input type="text" class="form-control" id="productQuantity" aria-describedby="productQuantityHelp">
-                  <small id="productQuantityHelp" class="form-text text-muted">How many of this product should be added
-                    to the stock?</small>
-                </div>
-                <div class="form-group">
-                  <label for="description">Desctiption</label>
-                  <textarea class="form-control" id="description" rows="3"
-                    aria-describedby="descriptionHelp"></textarea>
-                  <small id="descriptionHelp" class="form-text text-muted">Please provide a brief description about the
-                    product.</small>
-                </div>
-              </form>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary" id="saveProductButton">Save changes</button>
+
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="addInvoiceItemButton">Add Item</button>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
 
+
+
+
+
+
+
+
+
+
   </div>
+
 
 
 </body>
