added new features

--- a/bin/main/static/customer.html
+++ b/bin/main/static/customer.html
@@ -13,7 +13,8 @@
   <script src="libs/jquery-3.4.1.slim.min.js"></script>
   <script src="libs/popper.min.js"></script>
   <script src="libs/bootstrap.min.js"></script>
-  <script src="js/products.js"></script>
+  <script src="js/common.js"></script>
+  <script src="js/customer.js"></script>
 </head>
 
 <body>
@@ -26,7 +27,7 @@
     <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="billing" id="billingNavItem">
+          <a class="nav-link" href="/" id="billingNavItem">
             BILLING
           </a>
         </li>
@@ -41,7 +42,7 @@
           </a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" href="/products" id="productsNavItem">
+          <a class="nav-link" href="products" id="productsNavItem">
             PRODUCTS
           </a>
         </li>
@@ -50,7 +51,16 @@
   </nav>
   <div class=".container-fluid">
     <div class="row" style="padding-top: 100px;">
-      <div class="col-lg-8 offset-lg-2">
+      <div class="col-lg-10 offset-lg-1">
+	  <div class="input-group mb-3">
+          <input type="text" id="searchCustomerInput" class="form-control" placeholder="Search Company name/Customer name/mobile/email/address"
+            aria-label="Search Product Name" aria-describedby="searchCustomerButton">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button" id="searchCustomerButton">Search</button>
+            <button class="btn btn-outline-secondary" type="button" id="clearCustomerButton">Clear</button>
+          </div>
+        </div>
+        
         <table class="table table-striped table-bordered">
           <thead class="thead-dark">
             <tr>
@@ -64,118 +74,169 @@
 			  <th scope="col">Action</th>
             </tr>
           </thead>
-          <tbody>
-			<tr>
-				<th scope="row">1</th>
-				<td>SK Solutions</td>
-				<td>Satheesh Kumar</td>
-				<td>9943670436</td>
-				<td>vsathishbtech@gmail.com</td>
-				<td>Omalur</td>
-				<td>15000</td>
-				<td></td>
-			</tr>
-			<tr>
-				<th scope="row">2</th>
-				<td>MK Solutions</td>
-				<td>Kishore Kumar</td>
-				<td>9790071848</td>
-				<td>gkishorebtech@gmail.com</td>
-				<td>Salem</td>
-				<td>18000</td>
-				<td></td>
-			</tr>
-			<tr>
-				<th scope="row">3</th>
-				<td>RK Solutions</td>
-				<td>Rajasekaran</td>
-				<td>7845166392</td>
-				<td>mrajibtech@gmail.com</td>
-				<td>Pachappatti</td>
-				<td>20000</td>
-				<td></td>
-			</tr>
-			</tbody>
+          <tbody id="customers_table_body">
+		</tbody>
         </table>
 		<!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addProductModal"
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addCustomerModal"
           style="float: right;">
           Add Customer
         </button>
       </div>
 	   <!-- Modal -->
-      <div class="modal fade" id="addProductModal" tabindex="-1" role="dialog" aria-labelledby="addProductModalLabel"
+      <div class="modal fade" id="addCustomerModal" tabindex="-1" role="dialog" aria-labelledby="addCustomerModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="addProductModalLabel">Add Customer</h5>
+              <h5 class="modal-title" id="addCustomerModalLabel">Add Customer</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
               <form>
-  <div class="form-row">
-    <div class="form-group col-md-6">
+  
+    <div class="form-group ">
       <label for="inputCompany">Company Name</label>
-      <input type="text" class="form-control" id="inputCompany" placeholder="Company Name">
+	   
+      <input type="text" class="form-control" id="inputCompany" placeholder="Company Name"  aria-describedby="companyHelp">
+      <small id="companyHelp" class="form-text text-muted">Please provide a company name. This will
+                    be used to search a particular company.</small>
     </div>
-    <div class="form-group col-md-6">
+    <div class="form-group ">
       <label for="inputCustomer">Customer Name</label>
-      <input type="text" class="form-control" id="inputCustomer" placeholder="Customer Name">
+      <input type="text" class="form-control" id="inputCustomer" placeholder="Customer Name"  aria-describedby="customerHelp">
+                  <small id="customerHelp" class="form-text text-muted">Please provide a Customer name . This will
+                    be used to a search customer .</small>
     </div>
-  </div>
+  
   <div class="form-group">
     <label for="inputAddress">Address</label>
-    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-  </div>
-  <div class="form-group">
-    <label for="inputAddress2">Address 2</label>
-    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St"  aria-describedby="addressHelp">
+                  <small id="addressHelp" class="form-text text-muted">Please provide an address for the customer. This will
+                    be used to search a particular address of the customer.</small>
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
-      <label for="inputCity">City</label>
-      <input type="text" class="form-control" id="inputCity">
-    </div>
-    <div class="form-group col-md-4">
-      <label for="inputState">State</label>
-      <select id="inputState" class="form-control">
-        <option selected>Choose...</option>
-        <option>Tamilnadu</option>
-		<option>Kerala</option>
-		<option>Andhra Pradesh</option>
-		<option>Karnataka</option>
-		<option>Telugana</option>
-      </select>
-    </div>
-    <div class="form-group col-md-2">
-      <label for="inputZip">Zip</label>
-      <input type="text" class="form-control" id="inputZip">
-    </div>
-  </div>
-  <div class="form-row">
-    <div class="form-group col-md-4">
       <label for="inputPhone">Mobile Number</label>
-      <input type="text" class="form-control" id="inputPhone" placeholder="Mobile Number">
+      <input type="text" class="form-control" id="inputPhone" placeholder="Mobile Number"  aria-describedby="mobileHelp">
+                  <small id="mobileHelp" class="form-text text-muted">Please provide a mobile number to contact customer. </small>
     </div>
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-6">
       <label for="inputEmail">Email</label>
-      <input type="email;" class="form-control" id="inputEmail" placeholder="Email">
+      <input type="email;" class="form-control" id="inputEmail" placeholder="Email"  aria-describedby="emailHelp">
+                  <small id="emailHelp" class="form-text text-muted">Please provide a email for  customer.</small>
     </div>
-	<div class="form-group col-md-3">
-      <label for="inputOutstanding">Outstanding</label>
-      <input type="text" class="form-control" id="inputOutstanding">
-    </div>
- 
+	
   </div>
+ <div class="form-group ">
+      <label for="inputOutstanding">Outstanding</label>
+      <input type="text" class="form-control" id="inputOutstanding"  aria-describedby="outstandingHelp">
+                  <small id="outstandingHelp" class="form-text text-muted">Please provide a oustanding amount for the products. This will
+                    be helpful to know a amount pending.</small>
+    </div>
  
 </form>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary" id="saveProductButton">Save changes</button>
+              <button type="button" class="btn btn-primary" id="saveCustomerButton">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+<!-- Edit Product Modal -->
+      <div class="modal fade" id="editCustomerModal" tabindex="-1" role="dialog" aria-labelledby="editCustomerModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="editCustomerModalLabel">Edit Customer</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="alert alert-danger fade show" role="alert" id="editCustomerErrorAlert"
+                      style="display: none;">
+                      <strong>ERROR: </strong> <span id="editCustomerErrorMsg"></span>
+                    </div>
+                    <form>
+                      <div class="form-group ">
+      <label for="editInputCompany">Company Name*</label>
+	  <input type="text" class="form-control" id="editCustomerId" style="display: none;">
+      <input type="text" class="form-control" id="editInputCompany" placeholder="Company Name"  aria-describedby="editCompanyHelp">
+      <small id="editCompanyHelp" class="form-text text-muted">Please provide a company name. This will
+                    be used to search a particular company.</small>
+    </div>
+    <div class="form-group ">
+      <label for="editInputCustomer">Customer Name</label>
+      <input type="text" class="form-control" id="editInputCustomer" placeholder="Customer Name"  aria-describedby="editCustomerHelp">
+                  <small id="editCustomerHelp" class="form-text text-muted">Please provide a Customer name . This will
+                    be used to a search customer .</small>
+    </div>
+  
+  <div class="form-group">
+    <label for="editInputAddress">Address</label>
+    <input type="text" class="form-control" id="editInputAddress" placeholder="1234 Main St"  aria-describedby="editAddressHelp">
+                  <small id="editAddressHelp" class="form-text text-muted">Please provide an address for the customer. This will
+                    be used to search a particular address of the customer.</small>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="editInputPhone">Mobile Number</label>
+      <input type="text" class="form-control" id="editInputPhone" placeholder="Mobile Number"  aria-describedby="editMobileHelp">
+                  <small id="editMobileHelp" class="form-text text-muted">Please provide a mobile number to contact customer. </small>
+    </div>
+    <div class="form-group col-md-6">
+      <label for="editInputEmail">Email</label>
+      <input type="email;" class="form-control" id="editInputEmail" placeholder="Email"  aria-describedby="editEmailHelp">
+                  <small id="editEmailHelp" class="form-text text-muted">Please provide a email for  customer.</small>
+    </div>
+	
+  </div>
+ <div class="form-group ">
+      <label for="editInputOutstanding">Outstanding</label>
+      <input type="text" class="form-control" id="editInputOutstanding"  aria-describedby="editOutstandingHelp">
+                  <small id="editOutstandingHelp" class="form-text text-muted">Please provide a oustanding amount for the products. This will
+                    be helpful to know a amount pending.</small>
+    </div>
+</form>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary" id="updateCustomerButton">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Delete Product Confirmation Modal -->
+      <div class="modal fade" id="deleteCustomerModal" tabindex="-1" role="dialog" aria-labelledby="deleteCustomerHeader"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="deleteCustomerHeader">Customer Product</h5>
+            </div>
+            <div class="modal-body">
+              <div class="alert alert-danger fade show" role="alert" id="deleteCustomerErrorAlert"
+                style="display: none;">
+                <strong>ERROR: </strong> <span id="deleteCustomerErrorMsg"></span>
+              </div>
+              Do you want to delete the customer?
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary" id="deleteCustomerConfirm">Delete</button>
             </div>
           </div>
         </div>
