--- a/bin/main/static/products.html
+++ b/bin/main/static/products.html
@@ -13,6 +13,7 @@
   <script src="libs/jquery-3.4.1.slim.min.js"></script>
   <script src="libs/popper.min.js"></script>
   <script src="libs/bootstrap.min.js"></script>
+  <script src="js/common.js"></script>
   <script src="js/products.js"></script>
 </head>
 
@@ -26,7 +27,7 @@
     <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="billing" id="billingNavItem">
+          <a class="nav-link" href="/" id="billingNavItem">
             BILLING
           </a>
         </li>
