--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,6 +13,7 @@
   <script src="libs/jquery-3.4.1.slim.min.js"></script>
   <script src="libs/popper.min.js"></script>
   <script src="libs/bootstrap.min.js"></script>
+  <script src="js/common.js"></script>
   <script src="js/billing.js"></script>
 </head>
 
