--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -201,16 +201,14 @@
                         style="display: none;">
                         <strong>ERROR: </strong> <span id="checkoutErrorMsg"></span>
                       </div>
-                      <form>
-                        <div class="input-group mb-3">
-                          <input type="text" id="customerPhNumber" class="form-control"
-                            placeholder="Search Customer Ph.No" aria-label="Search Customer Ph.No"
-                            aria-describedby="searchCustomerPhNumber">
-                          <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" type="button"
-                              id="searchCustomerPhNumber">Search</button>
-                          </div>
-                        </div>
+                      <input type="text" id="customerPhNumber" class="form-control  dropdown-toggle" placeholder="Search Customer Ph.No"
+                        aria-label="Search Customer Ph.No" aria-describedby="searchCustomerPhNumber" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <!-- <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Dropdown button
+                      </button> -->
+                      <div class="dropdown-menu col-md-11" aria-labelledby="customerPhNumber" id="customerSearchList">
+                      </div>
                     </div>
                     <div class="row">
                       <div class="col-md-12">
