Purchase module done

--- a/bin/main/static/customer.html
+++ b/bin/main/static/customer.html
@@ -46,11 +46,16 @@
             PRODUCTS
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="purchases" id="purchasesNavItem">
+            PURCHASE
+          </a>
+        </li>
       </ul>
     </div>
   </nav>
   <div class=".container-fluid">
-    <div class="row" style="padding-top: 100px;">
+    <div class="row" style="padding-top: 25;">
       <div class="col-lg-10 offset-lg-1">
 	  <div class="input-group mb-3">
           <input type="text" id="searchCustomerInput" class="form-control" placeholder="Search Company name/Customer name/mobile/email/address"
