--- a/bin/main/static/index.html
+++ b/bin/main/static/index.html
@@ -49,6 +49,11 @@
             PRODUCTS
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="purchases" id="purchasesNavItem">
+            PURCHASE
+          </a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -202,11 +207,7 @@
                         <strong>ERROR: </strong> <span id="checkoutErrorMsg"></span>
                       </div>
                       <input type="text" id="customerPhNumber" class="form-control  dropdown-toggle" placeholder="Search Customer Ph.No"
-                        aria-label="Search Customer Ph.No" aria-describedby="searchCustomerPhNumber" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <!-- <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown button
-                      </button> -->
+                        aria-label="Search Customer Ph.No" aria-describedby="searchCustomerPhNumber" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">                      
                       <div class="dropdown-menu col-md-11" aria-labelledby="customerPhNumber" id="customerSearchList">
                       </div>
                     </div>
