--- a/bin/main/static/invoice.html
+++ b/bin/main/static/invoice.html
@@ -47,12 +47,17 @@
             PRODUCTS
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="purchases" id="purchasesNavItem">
+            PURCHASE
+          </a>
+        </li>
       </ul>
     </div>
   </nav>
   <div class=".container-fluid">
-    <div class="row" style="padding-top: 100px;">
-      <div class="col-lg-8 offset-lg-2">
+    <div class="row" style="padding-top: 25;">
+      <div class="col-lg-10 offset-lg-1">
         <div class="input-group mb-3">
           <input type="text" id="searchProductInput" class="form-control" placeholder="Search Product Name"
             aria-label="Search Product Name" aria-describedby="searchProductButton">
