--- a/bin/main/static/invoice.html
+++ b/bin/main/static/invoice.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="libs/bootstrap-4.4.1.min.css">
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Vetrivel Mills</title>
+  <title>BillingApp</title>
   <script src="libs/jquery-3.4.1.slim.min.js"></script>
   <script src="libs/popper.min.js"></script>
   <script src="libs/bootstrap.min.js"></script>
@@ -20,7 +20,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg  navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">VETRIVEL MILLS</a>
+    <a class="navbar-brand" href="#">BillingApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
