--- a/src/main/resources/static/customer.html
+++ b/src/main/resources/static/customer.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
   <div class=".container-fluid">
-    <div class="row" style="padding-top: 25;">
+    <div class="row" style="padding-top: 25px;">
       <div class="col-lg-10 offset-lg-1">
 	  <div class="input-group mb-3">
           <input type="text" id="searchCustomerInput" class="form-control" placeholder="Search Company name/Customer name/mobile/email/address"
