--- a/src/main/resources/static/invoice.html
+++ b/src/main/resources/static/invoice.html
@@ -56,7 +56,7 @@
     </div>
   </nav>
   <div class=".container-fluid">
-    <div class="row" style="padding-top: 25;">
+    <div class="row" style="padding-top: 25px;">
       <div class="col-lg-10 offset-lg-1">
         <div class="input-group mb-3">
           <input type="text" id="searchProductInput" class="form-control" placeholder="Search Product Name"
